pls build jitpack